# random_ndays

cve_2019_1436/: Cargo.toml
cve_2019_1436/src/: libloader.rs  main.rs
cve_2019_1440/: Cargo.toml
cve_2019_1440/src/: main.rs  patchcallbacktable.rs
