[package]
name = "cve_2019_1436"
version = "0.1.0"
authors = ["jessi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# forget it. avoid an extern
# [dependencies]
# winapi = { version = "0.3.6", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror"] }