[package]
name = "cve_2019_1440"
version = "0.1.0"
authors = ["jessi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser","libloaderapi","memoryapi","windef","ntdef"] }
lazy_static = "1.4.0"